--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@ body {
   width: 100%;
   background: #dfe6e9;
   &__list {
+    height: 100%;
     list-style: none;
     font-size: 2rem;
     padding: 0;
@@ -46,7 +47,9 @@ body {
   }
   &--item {
     width: 100%;
-    padding: 19px;
+    height: 25%;
+    padding: 15px;
+    line-height: 50px;
     display: block;
     color: $fontColor;
     text-decoration: none;
@@ -55,5 +58,19 @@ body {
     }
   }
  
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.page-heading {
+  height: 100vh;
+  width: 100%;
+  background: url("http://i1.wp.com/clipartportal.com/wp-content/uploads/2018/12/barber-clipart-black-and-white-1.jpg");
+  background-repeat: no-repeat;
+  background-size: 180%;
+  background-position: 50% 130%;
 }
 
