--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,9 +19,12 @@ body {
   text-align: center;
   font-family: $latoFont;
   position: relative;
+  max-width: 1025px;
+  margin: 0 auto 0 auto;
 }
 
 .navigation {
+  margin: 0;
   position: fixed;
   top: 0;
   width: 100%;
@@ -83,11 +86,13 @@ a {
   &--footer {
     height: 100px;
   }
+  &--profile-pic {
+    display: none;
+  }
 }
 
 .skill-section {
   padding: 50px 50px 0 50px;
-  height: 100vh;
   width: 100%;
   &__list {
     list-style: none;
@@ -166,5 +171,108 @@ a {
   position: absolute;
   bottom: 5px;
   text-align: center;
+  
+}
+
+@media (min-width: $tablet) {
+  .navigation {
+    &__switcher {
+      &--img {
+        height: 140px;
+        width: auto;
+      }
+    }
+  }
+  .header-section {
+    text-align: center;
+    &--profile-pic {
+      display: inline;
+      height: 250px;
+      border-radius: 50%;
+      text-align: center;
+    }
+  }
+  & p {
+    font-size: 18px;
+  }
+  .my-work {
+    height: auto;
+    &--img {
+    }
+  }
+  .contact {
+    &--footer {
+      height: 200px;
+      margin-top: 40px;
+    }
+  }
+  .find-me {
+    &--map {
+      height: 400px;
+    }
+  }
+}
+
+@media (min-width: $deskop) {
+  .navigation {
+    &--visible {
+      display: block;
+
+    }
+    &__switcher {
+      display: none;
+    }
+    &__list {
+      display: flex;
+      max-width: 1024px;
+    }
+    &--item {
+      font-size: 20px;
+      padding: 10px;
+    }
+  }
+  .header-section {
+    margin-top: 20px;
+    text-align: left;
+    &__header {
+      display: flex;
+    }
+    &--footer {
+      display: none;
+    }
+    &__box {
+      height: 100%;
+      min-width: 50%;
+      margin: 0;
+      padding: 40px;
+    }
+    &--profile-pic {
+      height: 100%;
+      width: 100%;
+      padding: 20px;
+      
+    }
+    
+  }
+
+  
+  .skill-section {
+    &--item {
+      &--second {
+        margin-left: 25%;
+      }
+      &--third {
+        margin-left: 50%;
+      }
+      &--fourth {
+        margin-left: 75%;
+      }
+      height: 20%;
+      width: 25%;
+      &--heading {
+        font-size: 26px;
+      }
+    }
+  }
   
 }
